@@ -132,6 +132,15 @@ public:
   virtual CjrlJoint& fixedJoint(unsigned int inJointRank) = 0;
 
   /**
+     \brief Set the joint ordering in the configuration vector
+     
+     \param inJointVector Vector of the robot joints
+
+     Specifies the order of the joints in the configuration vector. The vector should contain all the joints of the current robot.
+  */
+  virtual setJointOrderInConfig(std::vector<CjrlJoint*> inJointVector) = 0;
+
+  /**
      @}
   */
 
