@@ -1,3 +1,8 @@
+
+2008/02/19
+
+	21. Added method setJointOrderInConfig in CjrlDynamicRobot.
+	
 jrl-dynamics version 1.8 released February 16, 2008
 
 	20. Added rightHand() and lefHand() methods to CjrlHumanoidDynamicRobot
